# Mirror-R-Type

./: .clang-tidy  .env.example  .gitignore  404.html  CMakeLists.txt  CONTRIBUTING.md  Dockerfile.bagario-server  Dockerfile.builder  Dockerfile.rtype-server  LICENSE  PROTOCOL.txt  README.md  build.bat  build.sh  index.html  mkdocs.yml  test_client.sh  toasty-exploring-church.md  vcpkg.json
engine/: CMakeLists.txt
engine/include/: SparseSet.hpp  Test.hpp
engine/include/ecs/: SparseSet.hpp
engine/include/plugin_manager/: IGraphicsPlugin.hpp
engine/plugin_manager/: CMakeLists.txt
engine/plugin_manager/examples/: example_usage.cpp
engine/plugin_manager/include/: IAudioPlugin.hpp  IInputPlugin.hpp  INetworkPlugin.hpp  IPlugin.hpp
engine/plugin_manager/src/: PluginManager.cpp
engine/plugins/audio/miniaudio/: CMakeLists.txt  README.md  example_usage.cpp
engine/plugins/graphics/raylib/: CMakeLists.txt
engine/plugins/network/asio/: CMakeLists.txt
engine/src/: SparseSet.cpp  Test.cpp
engine/src/core/event/: EventBus.cpp
engine/src/plugin_manager/: HOW_TO_CREATE_PLUGIN.md
engine/systems/: GUIDE_INPUT_SYSTEM.md  GUIDE_PHYSICS_SYSTEM.md  GUIDE_RENDER_SYSTEM.md  InputSystem.hpp  MovementSystem.hpp  PhysicsSystem.hpp  README.md  RenderSystem.hpp
engine/systems/temp/: TempComponents.hpp  TempEvents.hpp  TempRegistry.hpp
engine/test/ecs/: test_sparseset.cpp
engine/test/plugin_manager/: test_plugin_manager.cpp
engine/tests/: MockPlugins.hpp  demo_movement.cpp
pocs/EventBus/: .gitignore  CMakeLists.txt  README.md
pocs/EventBus/benchmarks/: benchmark_comparison.cpp
pocs/EventBus/include/approach_a/: AudioEngine.hpp  Common.hpp  PhysicsEngine.hpp  Renderer.hpp  ScoreManager.hpp
pocs/EventBus/include/approach_b/: AudioEngine.hpp  Common.hpp  EventBus.hpp  PhysicsEngine.hpp  Renderer.hpp  ScoreManager.hpp
pocs/EventBus/src/approach_a/: AudioEngine.cpp  PhysicsEngine.cpp  Renderer.cpp  ScoreManager.cpp  main.cpp
pocs/EventBus/src/approach_b/: AudioEngine.cpp  EventBus.cpp  PhysicsEngine.cpp  Renderer.cpp  ScoreManager.cpp  main.cpp
pocs/EventBus/tests/: test_approach_a.cpp  test_approach_b.cpp
pocs/poc_libraries/: CMakeLists.txt  README.md  benchmark.cpp  demo_interactive.sh
pocs/poc_libraries/demo/: main.cpp
pocs/poc_libraries/dynamic_lib/: BasicEnemy.cpp  BossEnemy.cpp  IEnemyPlugin.hpp
pocs/poc_libraries/static_lib/: CoreEngine.cpp  CoreEngine.hpp
src/bagario/client/: CMakeLists.txt
src/bagario/client/include/: BagarioGame.hpp  Camera.hpp  ClientGameState.hpp  ScreenManager.hpp
src/bagario/client/src/: BagarioGame.cpp  Camera.cpp  ClientGameState.cpp  ScreenManager.cpp  main.cpp
src/bagario/game-logic/: CMakeLists.txt
src/bagario/server/: CMakeLists.txt
src/bagario/server/include/: BagarioNetworkHandler.hpp  BagarioPacketSender.hpp  BagarioServer.hpp  BagarioSession.hpp
src/bagario/server/src/: BagarioNetworkHandler.cpp  BagarioPacketSender.cpp  BagarioServer.cpp  BagarioSession.cpp  main.cpp
src/client/: CMakeLists.txt
src/client/src/: main.cpp
src/engine/: CMakeLists.txt
src/engine/include/: Entity.hpp
src/engine/include/ecs/: AudioComponents.hpp  Component.hpp  Components.hpp  CoreComponents.hpp  ISystem.hpp  Registry.hpp  SparseSet.hpp
src/engine/include/plugin_manager/: CommonTypes.hpp  IAudioPlugin.hpp  IGraphicsPlugin.hpp  IInputPlugin.hpp  INetworkPlugin.hpp  IPlugin.hpp  KeyConfig.hpp  PluginExport.hpp  PluginManager.hpp  PluginPaths.hpp
src/engine/src/ecs/: Registry.cpp  SparseSet.cpp
src/engine/src/plugin_manager/: HOW_TO_CREATE_PLUGIN.md  PluginManager.cpp  USAGE.md
src/engine/test/plugin_manager/: example_usage.cpp  test_plugin.cpp  test_plugin_manager.cpp
src/game/: CMakeLists.txt
src/game/include/components/: GameComponents.hpp
src/game/include/systems/: AISystem.hpp  HitEffectSystem.hpp  ScoreSystem.hpp  ShootingSystem.hpp
src/game/src/systems/: AISystem.cpp  CollisionSystem.cpp  HealthSystem.cpp  HitEffectSystem.cpp  ScoreSystem.cpp  ShootingSystem.cpp
src/r-type/: CMakeLists.txt
src/r-type/assets/: map_config.json  waves_asteroid_belt.json  waves_bydo_mothership.json  waves_example.json  waves_nebula_outpost.json  waves_simple.json  waves_test_walls.json
src/r-type/assets/audio/: audio_config.json
src/r-type/assets/config/: enemies.json
src/r-type/assets/levels/: level_0_test.json  level_1_asteroid_belt.json  level_1_mars_assault.json  level_2_nebula_station.json  level_3_bydo_fortress.json  level_3_uranus_station.json  level_4_jupiter_orbit.json  level_99_instant_boss.json
src/r-type/assets/maps/: index.json
src/r-type/client/: CMakeLists.txt  MenuManager.md
src/r-type/client/include/: ClientComponents.hpp  ClientGame.hpp  DebugNetworkOverlay.hpp  DebugSettings.hpp  EntityManager.hpp  InputHandler.hpp  KeyBindings.hpp  MenuManager.hpp  NetworkClient.hpp  ScreenManager.hpp  SpaceshipManager.hpp  StatusOverlay.hpp  TextureManager.hpp
src/r-type/client/src/: ClientGame.cpp  EntityManager.cpp  (+12 more)
src/r-type/game-logic/: CMakeLists.txt
src/r-type/server/: CMakeLists.txt
src/r-type/shared/: AssetsPaths.hpp  CMakeLists.txt  GameConfig.hpp  GameDimensions.hpp
src/server/: CMakeLists.txt
src/server/src/: main.cpp
tests/: CMakeLists.txt
tests/audio_plugins/: CMakeLists.txt  test_miniaudio_plugin.cpp
tests/core/event/: test_eventbus.cpp
tests/ecs/: test_collision_simple.cpp  test_collision_simple_gtest.cpp  test_collision_system.cpp  test_destroy_system.cpp  test_input_collision.cpp  test_input_plugin.cpp  test_input_plugin_gtest.cpp  test_movement_system.cpp  test_physique_system.cpp  test_registry.cpp  test_render_system.cpp  test_shooting_collision_gtest.cpp  test_shooting_system.cpp  test_sparseset.cpp  test_sparseset_gtest.cpp
tests/graphics_plugins/: CMakeLists.txt  test_minimal.cpp  test_raylib_plugin.cpp
tests/network_plugins/: CMakeLists.txt  test_asio_network_plugin.cpp
tests/plugin_manager/: CMakeLists.txt  example_usage.cpp  test_plugin.cpp  test_plugin_manager.cpp
tests/protocol/: protocol_test.cpp
tests/server/: test_client.py  test_rooms.py
(+414 files in other folders)
